--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,5 +35,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          qmake -makefile mere-message-lib.pro -spec linux-clang 
+          qmake -makefile mere-rpc-lib.pro -spec linux-clang 
           make
