--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CheckCI
+name: CheckMereRPCLibCI
  
 # Controls when the action will run. 
 on:
@@ -35,5 +35,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          qmake -makefile mere-message-lib.pro -spec linux-clang 
+          qmake -makefile mere-rpc-lib.pro -spec linux-clang 
           make
