--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,16 @@ jobs:
     steps:
       - name: Install Qt
         uses: jurplel/install-qt-action@v2.12.1
-      
+        
+      - uses: actions/download-artifact@v2
+        with:
+          name: mere-message-lib.latest
+          path: /tmp/
+
+      # Runs a single command using the runners shell
+      - name: Install required mere-message-lib
+        run: sudo tar -zxvf /tmp/mere-message-lib.tgz -C /
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
