--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
-         repository: https://github.com/merelabs/mere-message-lib
+         repository: merelabs/mere-message-lib
 
       # Runs a set of commands using the runners shell
       - name: Build dependenies -> mere-message-lib
